kubernetes/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
spec:
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
